--- a/dd-style.css
+++ b/dd-style.css
@@ -4,6 +4,7 @@ body {
     line-height: 1.42857143;
     color: #231f20;
     background-color: #fff;
+    padding-top: 70px;
 }
 a {
     color: #ed1c24;
